.env images updated

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BLUE_IMAGE=hnginternship/blue-node-app:latest 
-GREEN_IMAGE=hnginternship/green-node-app:latest 
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two 
 ACTIVE_POOL=blue 
 RELEASE_ID_BLUE=blue-release-1.0.0 
 RELEASE_ID_GREEN=green-release-1.0.0
