--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx:
     image: nginx:1.25-alpine
@@ -17,6 +15,9 @@ services:
       /bin/sh -c "
         apk add --no-cache gettext &&
         envsubst '$$ACTIVE_POOL $$BLUE_HOST $$BLUE_PORT $$GREEN_HOST $$GREEN_PORT' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf &&
+        cat /etc/nginx/nginx.conf > /tmp/nginx_config.log &&
+        nginx -t 2> /tmp/nginx_config_error.log &&
+        if [ $? -ne 0 ]; then cat /tmp/nginx_config_error.log; exit 1; fi &&
         nginx -g 'daemon off;'
       "
     depends_on:
