--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two 
-ACTIVE_POOL=blue 
+ACTIVE_POOL=green
 RELEASE_ID_BLUE=blue-release-1.0.0 
 RELEASE_ID_GREEN=green-release-1.0.0
 
