--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two 
 ACTIVE_POOL=green
-RELEASE_ID_BLUE=blue-release-1.0.0 
-RELEASE_ID_GREEN=green-release-1.0.0
+RELEASE_ID_BLUE=blue-v1 
+RELEASE_ID_GREEN=green-v1
 
 PORT=8080 
 PORT_BLUE=8081 
