--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two 
-ACTIVE_POOL=green
+ACTIVE_POOL=blue
 RELEASE_ID_BLUE=blue-v1 
 RELEASE_ID_GREEN=green-v1
 
