update nginx.conf, deploy-stage and .env files

--- a/.env
+++ b/.env
@@ -1,9 +1,16 @@
+# Existing values
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
-GREEN_IMAGE=yimikaade/wonderful:devops-stage-two 
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 ACTIVE_POOL=blue
-RELEASE_ID_BLUE=blue-v1 
+RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
 
-PORT=8080 
-PORT_BLUE=8081 
+PORT=8080
+PORT_BLUE=8081
 PORT_GREEN=8082
+
+# Add these for Nginx envsubst
+BLUE_HOST=app_blue
+GREEN_HOST=app_green
+BLUE_PORT=3000
+GREEN_PORT=3000
