--- a/.env
+++ b/.env
@@ -1,15 +1,22 @@
-# Existing values
+# Docker images
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
+
+# Active pool
 ACTIVE_POOL=blue
+
+# Release IDs
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
 
+# Public port
 PORT=8080
-PORT_BLUE=8081
-PORT_GREEN=8082
 
-# Add these for Nginx envsubst
+# Internal service ports
+PORT_BLUE=3000
+PORT_GREEN=3000
+
+# Nginx upstream targets
 BLUE_HOST=app_blue
 GREEN_HOST=app_green
 BLUE_PORT=3000
