--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,23 @@
+# Docker images
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
-GREEN_IMAGE=yimikaade/wonderful:devops-stage-two 
-ACTIVE_POOL=blue 
-RELEASE_ID_BLUE=blue-release-1.0.0 
-RELEASE_ID_GREEN=green-release-1.0.0
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 
-PORT=8080 
-PORT_BLUE=8081 
-PORT_GREEN=8082
+# Active pool
+ACTIVE_POOL=blue
+
+# Release IDs
+RELEASE_ID_BLUE=blue-v1
+RELEASE_ID_GREEN=green-v1
+
+# Public port
+PORT=8080
+
+# Internal service ports
+PORT_BLUE=3000
+PORT_GREEN=3000
+
+# Nginx upstream targets
+BLUE_HOST=app_blue
+GREEN_HOST=app_green
+BLUE_PORT=3000
+GREEN_PORT=3000
