--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -18,8 +18,8 @@ http {
             proxy_pass http://${ACTIVE_POOL}_pool;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
-            proxy_pass_header X-App-Pool;
-            proxy_pass_header X-Release-Id;
+            proxy_set_header X-App-Pool ${ACTIVE_POOL};
+            proxy_set_header X-Release-Id ${RELEASE_ID_${ACTIVE_POOL^^}};
             proxy_connect_timeout 2s;
             proxy_send_timeout 5s;
             proxy_read_timeout 5s;
