update docker-compose and .env files

--- a/.env
+++ b/.env
@@ -19,5 +19,5 @@ PORT_GREEN=8082
 # Nginx upstream targets
 BLUE_HOST=app_blue
 GREEN_HOST=app_green
-PORT_BLUE=8081
-PORT_GREEN=8082
+BLUE_PORT=3000
+GREEN_PORT=3000
