--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
   app_blue:
     image: ${BLUE_IMAGE}
     ports:
-      - "${PORT_BLUE}8081:3000"
+      - "${PORT_BLUE}:${BLUE_PORT}"
     environment:
       - RELEASE_ID=${RELEASE_ID_BLUE}
       - APP_POOL=blue
@@ -40,7 +40,7 @@ services:
   app_green:
     image: ${GREEN_IMAGE}
     ports:
-      - "${PORT_GREEN}8082:3000"
+      - "${PORT_GREEN}:${GREEN_PORT}"
     environment:
       - RELEASE_ID=${RELEASE_ID_GREEN}
       - APP_POOL=green
