--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+    pid /var/run/nginx.pid;
+
     upstream blue_pool {
         server ${BLUE_HOST}:${BLUE_PORT} max_fails=1 fail_timeout=10s;
     }
