update deploy-stage2,docker-compose, .env

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ ACTIVE_POOL=blue
 # Release IDs
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
+RELEASE_ID=blue-v1  # Required for Compose substitution
 
 # Public port
 PORT=8080
