--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - BLUE_PORT=${BLUE_PORT}
       - GREEN_HOST=${GREEN_HOST}
       - GREEN_PORT=${GREEN_PORT}
-      - RELEASE_ID=${RELEASE_ID_BLUE}
+      - RELEASE_ID=${RELEASE_ID}
     command: >
       /bin/sh -c "
         apk add --no-cache gettext &&
