--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   nginx:
-    image: nginx:1.25-alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     ports:
       - "${PORT}:80"
-    volumes:
-      - ./config/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
     environment:
       - ACTIVE_POOL=${ACTIVE_POOL}
       - BLUE_HOST=${BLUE_HOST}
@@ -12,12 +12,6 @@ services:
       - GREEN_HOST=${GREEN_HOST}
       - GREEN_PORT=${GREEN_PORT}
       - RELEASE_ID=${RELEASE_ID}
-    command: >
-      /bin/sh -c "
-        apk add --no-cache gettext &&
-        envsubst '\$ACTIVE_POOL \$BLUE_HOST \$BLUE_PORT \$GREEN_HOST \$GREEN_PORT \$RELEASE_ID' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf &&
-        nginx -g 'daemon off;'
-      "
     depends_on:
       - app_blue
       - app_green
