update Dockerfile,.env, deploy-stage2, docker-compose

--- a/.env
+++ b/.env
@@ -1,24 +1,25 @@
-# Docker images
+# --- Docker Images ---
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 
-# Active pool
+# --- Deployment Configuration ---
 ACTIVE_POOL=blue
 
-# Release IDs
+# --- Release IDs ---
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
-RELEASE_ID=blue-v1  # Required for Compose substitution
 
-# Public port
+# --- Port Configuration ---
+# Public port Nginx listens on (Host Port)
 PORT=8080
 
-# Internal service ports
-PORT_BLUE=8081
-PORT_GREEN=8082
-BLUE_PORT=3000
-GREEN_PORT=3000
+# Internal application port (Container Port)
+# This MUST be the port your application container (app_blue/app_green) listens on.
+APP_INTERNAL_PORT=3000
 
-# Nginx upstream targets
+# --- Nginx Upstream Targets ---
 BLUE_HOST=app_blue
 GREEN_HOST=app_green
+# Use the internal application port for Nginx upstreams
+BLUE_PORT=${APP_INTERNAL_PORT}
+GREEN_PORT=${APP_INTERNAL_PORT}
