--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -7,4 +7,6 @@ RUN apk add --no-cache gettext
 COPY config/nginx.conf.template /etc/nginx/nginx.conf.template
 
 # Generate config at container startup using runtime env vars
-CMD ["/bin/sh", "-c", "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"]
+# FIX: Explicitly list the custom variables. This prevents envsubst from wiping out
+# Nginx's built-in variables like $host and $remote_addr, which causes a config error.
+CMD ["/bin/sh", "-c", "envsubst '$BLUE_HOST $BLUE_PORT $GREEN_HOST $GREEN_PORT $ACTIVE_POOL $RELEASE_ID' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"]
