--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -6,7 +6,7 @@ RUN apk add --no-cache gettext
 # Copy the config template
 COPY config/nginx.conf.template /etc/nginx/nginx.conf.template
 
-# FIX: Use double quotes and escape the dollar signs.
-# This ensures $BLUE_HOST is passed as the literal string '$BLUE_HOST' to envsubst,
-# which then substitutes it with the environment variable value.
-CMD ["/bin/sh", "-c", "envsubst '$$BLUE_HOST $$BLUE_PORT $$GREEN_HOST $$GREEN_PORT $$ACTIVE_POOL $$RELEASE_ID' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"]
+# FIX: Use a robust CMD that escapes dollar signs (using $$) for our custom variables.
+# This ensures Nginx's built-in variables (like $host) are left intact,
+# while our custom variables (like ${ACTIVE_POOL}) are correctly substituted.
+CMD /bin/sh -c "envsubst '$$BLUE_HOST $$BLUE_PORT $$GREEN_HOST $$GREEN_PORT $$ACTIVE_POOL $$RELEASE_ID' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
