some old files removes, new ones added

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,35 @@
-# --- Docker Images ---
-BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
-GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
+# .env.example
 
-# --- Deployment Configuration ---
+# Blue and Green image references
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two   # Blue image
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two  # Green image
+
+# Which pool is currently active
 ACTIVE_POOL=blue
 
-# --- Release IDs ---
+# Release IDs for header identification
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
 
-# --- Port Configuration ---
-# Public port Nginx listens on (Host Port)
-PORT=8080
+# Exposed ports
+PORT_BLUE=8081
+PORT_GREEN=8082
+NGINX_PORT=8080
 
-# Internal application port (Container Port)
-# This MUST be the port your application container (app_blue/app_green) listens on.
-APP_INTERNAL_PORT=3000
 
-# --- Nginx Upstream Targets ---
-BLUE_HOST=app_blue
-GREEN_HOST=app_green
-# Use the internal application port for Nginx upstreams
-BLUE_PORT=${APP_INTERNAL_PORT}
-GREEN_PORT=${APP_INTERNAL_PORT}
+# Stage 3 observability + Slack
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/XXX/YYY/ZZZ
+
+# Alerting thresholds (defaults)
+ERROR_RATE_THRESHOLD=2        # percent
+WINDOW_SIZE=200               # number of requests in rolling window
+ALERT_COOLDOWN_SEC=300        # seconds between same alert
+
+# Existing Stage2 variables (keep them)
+BLUE_IMAGE=...
+GREEN_IMAGE=...
+ACTIVE_POOL=blue
+RELEASE_ID_BLUE=blue-v1
+RELEASE_ID_GREEN=green-v1
+PORT=3000
+NGINX_PUBLIC_PORT=8080
