--- a/.env
+++ b/.env
@@ -1,25 +1,17 @@
-# --- Docker Images ---
-BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
-GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
+# .env
 
-# --- Deployment Configuration ---
+# Blue and Green image references
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two   # Blue image
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two  # Green image
+
+# Which pool is currently active
 ACTIVE_POOL=blue
 
-# --- Release IDs ---
+# Release IDs for header identification
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
 
-# --- Port Configuration ---
-# Public port Nginx listens on (Host Port)
-PORT=8080
-
-# Internal application port (Container Port)
-# This MUST be the port your application container (app_blue/app_green) listens on.
-APP_INTERNAL_PORT=3000
-
-# --- Nginx Upstream Targets ---
-BLUE_HOST=app_blue
-GREEN_HOST=app_green
-# Use the internal application port for Nginx upstreams
-BLUE_PORT=${APP_INTERNAL_PORT}
-GREEN_PORT=${APP_INTERNAL_PORT}
+# Exposed ports
+PORT_BLUE=8081
+PORT_GREEN=8082
+NGINX_PORT=8080
