--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,49 @@
-services:
-  nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
-    ports:
-      - "${PORT}:80" # Maps Host:8080 to Nginx:80
-    environment:
-      # Pass only the variables Nginx needs for template substitution
-      - ACTIVE_POOL
-      - BLUE_HOST
-      - BLUE_PORT
-      - GREEN_HOST
-      - GREEN_PORT
-      - RELEASE_ID
-    depends_on:
-      - app_blue
-      - app_green
-    networks:
-      - app-network
-    restart: unless-stopped # Added for resilience
+version: "3.8"
 
+services:
   app_blue:
     image: ${BLUE_IMAGE}
-    # Expose app port on host for optional debugging (e.g., curl :8081)
-    ports:
-      - "8081:${APP_INTERNAL_PORT}" 
+    container_name: app_blue
     environment:
       - RELEASE_ID=${RELEASE_ID_BLUE}
       - APP_POOL=blue
-    networks:
-      - app-network
-    restart: unless-stopped # Added for resilience
+      - PORT=${PORT:-3000}
+    ports:
+      - "8081:${PORT:-3000}"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-3000}/healthz"]
+      interval: 5s
+      timeout: 2s
+      retries: 3
 
   app_green:
     image: ${GREEN_IMAGE}
-    # Expose app port on host for optional debugging (e.g., curl :8082)
-    ports:
-      - "8082:${APP_INTERNAL_PORT}" 
+    container_name: app_green
     environment:
       - RELEASE_ID=${RELEASE_ID_GREEN}
       - APP_POOL=green
-    networks:
-      - app-network
-    restart: unless-stopped # Added for resilience
+      - PORT=${PORT:-3000}
+    ports:
+      - "8082:${PORT:-3000}"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-3000}/healthz"]
+      interval: 5s
+      timeout: 2s
+      retries: 3
 
-networks:
-  app-network:
-    driver: bridge
+  nginx:
+    image: nginx:stable
+    container_name: bg_nginx
+    depends_on:
+      - app_blue
+      - app_green
+    ports:
+      - "${NGINX_PUBLIC_PORT:-8080}:80"
+    volumes:
+      - ./nginx/default.conf.tmpl:/etc/nginx/templates/default.conf.tmpl:ro
+      - ./nginx/start.sh:/etc/nginx/start.sh:ro
+      - ./nginx/reload.sh:/etc/nginx/reload.sh:ro
+    environment:
+      - ACTIVE_POOL=${ACTIVE_POOL}
+      - APP_PORT=${PORT:-3000}
+    command: ["/bin/sh", "-c", "/etc/nginx/start.sh"]
