--- a/.env
+++ b/.env
@@ -1,17 +1,20 @@
-# .env
-
-# Blue and Green image references
-BLUE_IMAGE=yimikaade/wonderful:devops-stage-two   # Blue image
-GREEN_IMAGE=yimikaade/wonderful:devops-stage-two  # Green image
-
-# Which pool is currently active
+# Blue-Green Deployment
 ACTIVE_POOL=blue
-
-# Release IDs for header identification
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
-
-# Exposed ports
+PORT=8080
 PORT_BLUE=8081
 PORT_GREEN=8082
-NGINX_PORT=8080
+BLUE_PORT=3000
+GREEN_PORT=3000
+BLUE_HOST=app_blue
+GREEN_HOST=app_green
+
+# Observability & Alerts
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/XXX/YYY/ZZZ
+ERROR_RATE_THRESHOLD=2
+WINDOW_SIZE=200
+ALERT_COOLDOWN_SEC=300
+MAINTENANCE_MODE=false
