--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
+RELEASE_ID=blue-v1
 PORT=8080
 PORT_BLUE=8081
 PORT_GREEN=8082
