--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -30,7 +30,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-App-Pool ${ACTIVE_POOL};
-            proxy_set_header X-Release-Id "${RELEASE_ID:-unknown}";
+            proxy_set_header X-Release-Id "blue-v1";
         }
     }
 }
