--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,7 +1,12 @@
 FROM nginx:1.25-alpine
 
+# Install envsubst for variable substitution
 RUN apk add --no-cache gettext
 
+# Copy config template and entrypoint script
 COPY config/nginx.conf.template /etc/nginx/nginx.conf.template
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-CMD ["/bin/sh", "-c", "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"]
+# Use custom entrypoint to render config and start Nginx
+CMD ["/entrypoint.sh"]
