--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,25 @@
+version: "3.8"
+
 services:
-  nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
+  app_blue:
+    image: yimikaade/wonderful:devops-stage-two
+    container_name: app_blue
     ports:
-      - "${PORT}:80" 
-    environment:
-      - ACTIVE_POOL=${ACTIVE_POOL}
-      - BLUE_HOST=${BLUE_HOST}
-      - BLUE_PORT=${BLUE_PORT}
-      - GREEN_HOST=${GREEN_HOST}
-      - GREEN_PORT=${GREEN_PORT}
-      - RELEASE_ID=${RELEASE_ID}
-      
-    volumes:
-      - nginx-logs:/var/log/nginx
+      - "8081:3000"
+
+  app_green:
+    image: yimikaade/wonderful:devops-stage-two
+    container_name: app_green
+    ports:
+      - "8082:3000"
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     depends_on:
       - app_blue
       - app_green
-    networks:
-      - app-network
-
-  app_blue:
-    image: ${BLUE_IMAGE}
-    ports:
-      - "${PORT_BLUE}:${BLUE_PORT}"
-    environment:
-      - RELEASE_ID=${RELEASE_ID_BLUE}
-      - APP_POOL=blue
-    networks:
-      - app-network
-
-  app_green:
-    image: ${GREEN_IMAGE}
-    ports:
-      - "${PORT_GREEN}:${GREEN_PORT}"
-    environment:
-      - RELEASE_ID=${RELEASE_ID_GREEN}
-      - APP_POOL=green
-    networks:
-      - app-network
-
-  alert_watcher:
-    build:
-      context: ./watcher
     volumes:
-      - nginx-logs:/var/log/nginx
-    environment:
-      - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
-      - ERROR_RATE_THRESHOLD=${ERROR_RATE_THRESHOLD}
-      - WINDOW_SIZE=${WINDOW_SIZE}
-      - ALERT_COOLDOWN_SEC=${ALERT_COOLDOWN_SEC}
-      - MAINTENANCE_MODE=${MAINTENANCE_MODE}
-    networks:
-      - app-network
-      
-volumes:
-  nginx-logs:
-
-networks:
-  app-network:
-    driver: bridge
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
