--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -5,10 +5,11 @@ events {
 }
 
 http {
+    # Clean, valid log format
     log_format main '$remote_addr - $remote_user [$time_local] '
                     '"$request" $status $body_bytes_sent '
                     '"$http_referer" "$http_user_agent" '
-                    'pool=$pool release=$release upstream=$upstream_addr';
+                    'upstream=$upstream_addr request_time=$request_time upstream_time=$upstream_response_time';
 
     access_log /var/log/nginx/access.log main;
 
@@ -24,12 +25,11 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://$ACTIVE_POOL;
+            proxy_pass http://${ACTIVE_POOL}_pool;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
-            proxy_set_header X-App-Pool $ACTIVE_POOL;
-            proxy_set_header X-Release-Id $RELEASE_ID;
+            proxy_set_header X-App-Pool ${ACTIVE_POOL};
+            proxy_set_header X-Release-Id ${RELEASE_ID};
         }
     }
 }
-
