--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,69 @@
+version: "3.9"
+
 services:
-  app_blue:
-    image: yimikaade/wonderful:devops-stage-two
-    container_name: app_blue
-    ports:
-      - "8081:3000"
-
-  app_green:
-    image: yimikaade/wonderful:devops-stage-two
-    container_name: app_green
-    ports:
-      - "8082:3000"
-
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: nginx
+    ports:
+      - "${PORT}:80"
+    environment:
+      - ACTIVE_POOL=${ACTIVE_POOL}
+      - BLUE_HOST=${BLUE_HOST}
+      - BLUE_PORT=${BLUE_PORT}
+      - GREEN_HOST=${GREEN_HOST}
+      - GREEN_PORT=${GREEN_PORT}
+    volumes:
+      - ./config/nginx.conf.template:/etc/nginx/nginx.conf.template
+      - nginx-logs:/var/log/nginx
     depends_on:
       - app_blue
       - app_green
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - app-network
+    command: /bin/bash -c "envsubst '$$ACTIVE_POOL $$BLUE_HOST $$BLUE_PORT $$GREEN_HOST $$GREEN_PORT' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+
+  app_blue:
+    image: ${BLUE_IMAGE}
+    container_name: app_blue
     ports:
-      - "80:80"
+      - "${PORT_BLUE}:${BLUE_PORT}"
+    environment:
+      - APP_POOL=blue
+      - RELEASE_ID=${RELEASE_ID_BLUE}
+    networks:
+      - app-network
+
+  app_green:
+    image: ${GREEN_IMAGE}
+    container_name: app_green
+    ports:
+      - "${PORT_GREEN}:${GREEN_PORT}"
+    environment:
+      - APP_POOL=green
+      - RELEASE_ID=${RELEASE_ID_GREEN}
+    networks:
+      - app-network
+
+  alert_watcher:
+    build:
+      context: ./watcher
+    container_name: alert_watcher
+    volumes:
+      - nginx-logs:/var/log/nginx
+    environment:
+      - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
+      - ERROR_RATE_THRESHOLD=${ERROR_RATE_THRESHOLD}
+      - WINDOW_SIZE=${WINDOW_SIZE}
+      - ALERT_COOLDOWN_SEC=${ALERT_COOLDOWN_SEC}
+      - MAINTENANCE_MODE=${MAINTENANCE_MODE}
+    networks:
+      - app-network
+
+volumes:
+  nginx-logs:
+
+networks:
+  app-network:
+    driver: bridge
