--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -1,29 +1,30 @@
-user  nginx;
-worker_processes  auto;
+pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
+    access_log /var/log/nginx/access.log;
+
     upstream blue_pool {
-        server ${BLUE_HOST}:${BLUE_PORT};
+        server app_blue:3000;
     }
 
     upstream green_pool {
-        server ${GREEN_HOST}:${GREEN_PORT};
+        server app_green:3000;
     }
 
     server {
         listen 80;
 
         location / {
-            proxy_pass http://${ACTIVE_POOL}_pool;
+            # Select which pool is active via environment variable
+            proxy_pass http://$ACTIVE_POOL;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-App-Pool $ACTIVE_POOL;
+            proxy_set_header X-Release-Id $RELEASE_ID;
         }
     }
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
 }
