--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -6,6 +6,7 @@ events {
 
 http {
     access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
     upstream blue_pool {
         server app_blue:3000;
@@ -19,12 +20,12 @@ http {
         listen 80;
 
         location / {
-            # Select which pool is active via environment variable
-            proxy_pass http://$ACTIVE_POOL;
+            # Safely expand environment variable with quotes
+            proxy_pass http://${ACTIVE_POOL};
             proxy_http_version 1.1;
             proxy_set_header Host $host;
-            proxy_set_header X-App-Pool $ACTIVE_POOL;
-            proxy_set_header X-Release-Id $RELEASE_ID;
+            proxy_set_header X-App-Pool "${ACTIVE_POOL}";
+            proxy_set_header X-Release-Id "${RELEASE_ID}";
         }
     }
 }
