--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -20,12 +20,23 @@ http {
         listen 80;
 
         location / {
-            # Safely expand environment variable with quotes
-            proxy_pass http://${ACTIVE_POOL};
+            # Default to blue_pool if env var missing
+            set $target_pool "${ACTIVE_POOL}";
+            if ($target_pool = "") {
+                set $target_pool "blue_pool";
+            }
+
+            proxy_pass http://$target_pool;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
-            proxy_set_header X-App-Pool "${ACTIVE_POOL}";
-            proxy_set_header X-Release-Id "${RELEASE_ID}";
+            proxy_set_header X-App-Pool "$target_pool";
+
+            # Safe fallback for release id
+            set $release_id "${RELEASE_ID}";
+            if ($release_id = "") {
+                set $release_id "unknown";
+            }
+            proxy_set_header X-Release-Id "$release_id";
         }
     }
 }
