--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -21,22 +21,22 @@ http {
 
         location / {
             # Default to blue_pool if env var missing
-            set $target_pool "${ACTIVE_POOL}";
+            set $target_pool $ACTIVE_POOL;
             if ($target_pool = "") {
-                set $target_pool "blue_pool";
+                set $target_pool blue_pool;
             }
 
             proxy_pass http://$target_pool;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
-            proxy_set_header X-App-Pool "$target_pool";
+            proxy_set_header X-App-Pool $target_pool;
 
             # Safe fallback for release id
-            set $release_id "${RELEASE_ID}";
+            set $release_id $RELEASE_ID;
             if ($release_id = "") {
-                set $release_id "unknown";
+                set $release_id unknown;
             }
-            proxy_set_header X-Release-Id "$release_id";
+            proxy_set_header X-Release-Id $release_id;
         }
     }
 }
