--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -20,23 +20,22 @@ http {
         listen 80;
 
         location / {
-            # Default to blue_pool if env var missing
-            set $target_pool $ACTIVE_POOL;
-            if ($target_pool = "") {
-                set $target_pool blue_pool;
+            # Default target if not set
+            set $target_pool blue_pool;
+            if ($${ACTIVE_POOL}) {
+                set $target_pool $${ACTIVE_POOL};
             }
 
+            # Pass traffic to active pool
             proxy_pass http://$target_pool;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-App-Pool $target_pool;
 
-            # Safe fallback for release id
-            set $release_id $RELEASE_ID;
-            if ($release_id = "") {
-                set $release_id unknown;
+            # Optional release info
+            if ($${RELEASE_ID}) {
+                proxy_set_header X-Release-Id $${RELEASE_ID};
             }
-            proxy_set_header X-Release-Id $release_id;
         }
     }
 }
