--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -20,12 +20,12 @@ http {
         listen 80;
 
         location / {
-            # Send traffic directly to the active pool
-            proxy_pass http://$${ACTIVE_POOL};
+            # Send traffic to the active pool
+            proxy_pass http://${ACTIVE_POOL};
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-App-Pool $${ACTIVE_POOL};
-            proxy_set_header X-Release-Id $${RELEASE_ID};
+            proxy_set_header Host $$host;
+            proxy_set_header X-App-Pool ${ACTIVE_POOL};
+            proxy_set_header X-Release-Id ${RELEASE_ID};
         }
     }
 }
