--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -22,7 +22,7 @@ http {
         location / {
             proxy_pass http://${ACTIVE_POOL};
             proxy_http_version 1.1;
-            proxy_set_header Host $$host;
+            proxy_set_header Host $host;
             proxy_set_header X-App-Pool ${ACTIVE_POOL};
             proxy_set_header X-Release-Id ${RELEASE_ID};
         }
