--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -13,10 +13,11 @@ http {
         server app_green:3000;
     }
 
+    # ✅ Correct map syntax — NO extra args on same line
     map $ACTIVE_POOL $backend_upstream {
         default blue_pool;
-        blue blue_pool;
-        green green_pool;
+        "blue" blue_pool;
+        "green" green_pool;
     }
 
     server {
@@ -27,7 +28,7 @@ http {
             proxy_pass http://$backend_upstream;
             proxy_http_version 1.1;
 
-            # ✅ CORRECT headers (each must have exactly two arguments)
+            # ✅ Correct header directives (each has 2 args)
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
