--- a/config/nginx.conf.template
+++ b/config/nginx.conf.template
@@ -13,7 +13,7 @@ http {
         server app_green:3000;
     }
 
-    # ✅ Correct map syntax — NO extra args on same line
+    # Proper multi-line map syntax
     map $ACTIVE_POOL $backend_upstream {
         default blue_pool;
         "blue" blue_pool;
@@ -28,7 +28,6 @@ http {
             proxy_pass http://$backend_upstream;
             proxy_http_version 1.1;
 
-            # ✅ Correct header directives (each has 2 args)
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
