--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,6 +1,17 @@
+# Dockerfile.nginx
 FROM nginx:latest
 
-RUN apt-get update && apt-get install -y gettext-base
+# Install envsubst safely (for variable substitution)
+RUN apt-get update && apt-get install -y gettext-base && rm -rf /var/lib/apt/lists/*
 
+# Copy your Nginx config template
 COPY config/nginx.conf.template /etc/nginx/nginx.conf.template
-CMD ["/bin/bash", "-c", "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"]
+
+# Copy entrypoint script to render config before starting nginx
+COPY config/render-nginx.sh /docker-entrypoint.d/00-render-nginx.sh
+RUN chmod +x /docker-entrypoint.d/00-render-nginx.sh
+
+# Expose port 80
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
