--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,36 @@
 services:
-  app_blue:
-    image: yimikaade/wonderful:devops-stage-two
-    container_name: app_blue
-    ports:
-      - "8081:3000"
-
-  app_green:
-    image: yimikaade/wonderful:devops-stage-two
-    container_name: app_green
-    ports:
-      - "8082:3000"
-
   nginx:
     build:
-      context: .
-      dockerfile: Dockerfile.nginx
-    container_name: nginx
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: bg_nginx
+    ports:
+      - "${NGINX_PORT}:8080"
+    environment:
+      - ACTIVE_POOL=${ACTIVE_POOL}
+    volumes:
+      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+      - ./nginx/generated-nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app_blue
       - app_green
+
+  app_blue:
+    image: ${NODE_IMAGE}
+    container_name: app_blue
+    environment:
+      - APP_POOL=blue
+      - RELEASE_ID=${BLUE_RELEASE_ID}
+      - PORT=8081
     ports:
-      - "80:80"
-    environment:
-      - ACTIVE_POOL=${ACTIVE_POOL:-blue_pool}
-      - RELEASE_ID=${RELEASE_ID:-blue-v1}
+      - "${BLUE_PORT}:8081"
 
-  alert_watcher:
-    build:
-      context: ./watcher
-      dockerfile: Dockerfile
-    container_name: hng-stage2-devops-alert_watcher
-    restart: always
-    volumes:
-      - nginx-logs:/var/log/nginx
+  app_green:
+    image: ${NODE_IMAGE}
+    container_name: app_green
     environment:
-      - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
-
-volumes:
-  nginx-logs:
+      - APP_POOL=green
+      - RELEASE_ID=${GREEN_RELEASE_ID}
+      - PORT=8082
+    ports:
+      - "${GREEN_PORT}:8082"
