--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ GREEN_RELEASE_ID=green-v1.0.0
 # Default active pool
 ACTIVE_POOL=blue
 
-# Docker image for both Blue/Green apps
+# Node.js app image
 NODE_IMAGE=yimikaade/wonderful:devops-stage-two
