--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   nginx:
     build:
@@ -9,6 +11,7 @@ services:
     environment:
       - ACTIVE_POOL=${ACTIVE_POOL}
     volumes:
+      # Template and live config
       - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
       - ./nginx/generated-nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
