--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -3,6 +3,7 @@ events { worker_connections 1024; }
 
 http {
   upstream backend {
+    # Blue/Green pools
     server ${PRIMARY_SERVER} max_fails=2 fail_timeout=3s;
     server ${BACKUP_SERVER} backup max_fails=2 fail_timeout=3s;
   }
@@ -13,12 +14,12 @@ http {
     location / {
       proxy_pass http://backend;
 
-      # Forward headers
+      # Forward key headers
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-      # Retry policy
+      # Retry policy: transparent failover to backup
       proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
       proxy_next_upstream_tries 2;
       proxy_intercept_errors off;
