--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,35 @@
 services:
+  app_blue:
+    image: yimikaade/wonderful:devops-stage-two
+    environment:
+      - APP_POOL=blue
+      - RELEASE_ID=blue-001
+      - PORT=8081
+    expose:
+      - "8081"
+
+  app_green:
+    image: yimikaade/wonderful:devops-stage-two
+    environment:
+      - APP_POOL=green
+      - RELEASE_ID=green-001
+      - PORT=8082
+    expose:
+      - "8082"
+
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    build: ./nginx
     container_name: bg_nginx
     ports:
-      - "${NGINX_PORT}:8080"
+      - "8080:8080"
     environment:
-      - ACTIVE_POOL=${ACTIVE_POOL}
-    volumes:
-      # Template and live config
-      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
-      - ./nginx/generated-nginx.conf:/etc/nginx/conf.d/default.conf
+      - ACTIVE_POOL=blue
+      - BLUE_PORT=8081
+      - GREEN_PORT=8082
+      - BLUE_RELEASE_ID=blue-001
+      - GREEN_RELEASE_ID=green-001
     depends_on:
       - app_blue
       - app_green
-
-  app_blue:
-    image: ${NODE_IMAGE}
-    container_name: app_blue
-    environment:
-      - APP_POOL=blue
-      - RELEASE_ID=${BLUE_RELEASE_ID}
-      - PORT=8081
-    ports:
-      - "${BLUE_PORT}:8081"
-
-  app_green:
-    image: ${NODE_IMAGE}
-    container_name: app_green
-    environment:
-      - APP_POOL=green
-      - RELEASE_ID=${GREEN_RELEASE_ID}
-      - PORT=8082
-    ports:
-      - "${GREEN_PORT}:8082"
+    volumes:
+      - ./nginx/generated-nginx.conf:/etc/nginx/conf.d/default.conf
