some file deleted and added

--- a/.env
+++ b/.env
@@ -1,14 +1,6 @@
-# Ports
-NGINX_PORT=8080
-BLUE_PORT=8081
-GREEN_PORT=8082
-
-# Release identifiers
-BLUE_RELEASE_ID=blue-v1.0.0
-GREEN_RELEASE_ID=green-v1.0.0
-
-# Default active pool
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 ACTIVE_POOL=blue
-
-# Node.js app image
-NODE_IMAGE=yimikaade/wonderful:devops-stage-two
+RELEASE_ID_BLUE=1.0.0
+RELEASE_ID_GREEN=1.0.1
+PORT=3000
