--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,30 @@
 services:
-  app_blue:
-    image: yimikaade/wonderful:devops-stage-two
-    environment:
-      - APP_POOL=blue
-      - RELEASE_ID=blue-001
-      - PORT=8081
-    expose:
-      - "8081"
-
-  app_green:
-    image: yimikaade/wonderful:devops-stage-two
-    environment:
-      - APP_POOL=green
-      - RELEASE_ID=green-001
-      - PORT=8082
-    expose:
-      - "8082"
-
   nginx:
-    build: ./nginx
-    container_name: bg_nginx
+    image: nginx:latest
     ports:
-      - "8080:8080"
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+      - ./nginx/entrypoint.sh:/entrypoint.sh:ro
     environment:
-      - ACTIVE_POOL=blue
-      - BLUE_PORT=8081
-      - GREEN_PORT=8082
-      - BLUE_RELEASE_ID=blue-001
-      - GREEN_RELEASE_ID=green-001
+      - ACTIVE_POOL=${ACTIVE_POOL}
+    entrypoint: ["/bin/bash", "/entrypoint.sh"]
     depends_on:
       - app_blue
       - app_green
-    volumes:
-      - ./nginx/generated-nginx.conf:/etc/nginx/conf.d/default.conf
+
+  app_blue:
+    image: ${BLUE_IMAGE}
+    environment:
+      - RELEASE_ID=${RELEASE_ID_BLUE}
+      - PORT=${PORT}
+    ports:
+      - "8081:${PORT}"
+
+  app_green:
+    image: ${GREEN_IMAGE}
+    environment:
+      - RELEASE_ID=${RELEASE_ID_GREEN}
+      - PORT=${PORT}
+    ports:
+      - "8082:${PORT}"
